Mining Framework Analysis for merge.mergiraf.java